--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Hello Welcome to Rieo's website</p>
-    <p>Hello World !</p>
+    <!-- <p>Hello !</p> -->
 </body>
 </html>
